<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angel.androidprojectprueba.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/vistaingresar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vistadevuelto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/toast_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toast_normal" />

        <Button
            android:id="@+id/toast_gravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toast_gravity" />

        <Button
            android:id="@+id/toast_personalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toast_personalizado" />

    </LinearLayout>

</FrameLayout>

